0.6 * complete re-write. Refactor everything.
    * make a structure of collectors, parsers, enrichers, filters, output modules
    * re-write spycloud parsing completely

0.5 * things sort of work, but feels buggy

0.4 * added endpoints for /leak and /leak_data
    * fixed the Answer format for all endpoints.
    * Added autocommit
    * Minor bugs.

0.3 * moved to public github.com/EC-DIGIT-CSIRC/credentialLeakDB.git
    * refactored code so that the Parser is now abstract, implement basic Spycloud parser
    * refactored DB insert
    * first API version, though still lots of bugs
0.2 moved to an internal proj. in github after OK from @ddurvaux
0.1 initial import